# py-commandline-proj

./: .coverage  .flake8  LICENSE  README.md  noxfile.py  pyproject.toml
src/py_commandline_proj/: console.py  wikipedia.py
tests/: conftest.py  test_console.py  test_wikipedia.py
