[tool.poetry]
description = "The hypermodern Python project"
license = "MIT"
name = "py-commandline-proj"
version = "0.1.0"
homepage = "https://github.com/karinhawk/py-commandline-proj"
repository = "https://github.com/karinhawk/py-commandline-proj"
authors = ["Karin Hawksworth <karin.hawksworth@dunelm.com>"]
readme = "README.md"
packages = [{include = "py_commandline_proj", from = "src"}]
keywords = ["hypermodern"]

[tool.poetry.scripts]
py-commandline-proj = "py_commandline_proj.console:main"

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.3"
requests = "^2.28.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
