[tool.poetry]
description = "The hypermodern Python project"
license = "MIT"
name = "py-commandline-proj"
version = "0.1.0"
homepage = "https://github.com/karinhawk/py-commandline-proj"
repository = "https://github.com/karinhawk/py-commandline-proj"
authors = ["Karin Hawksworth <karin.hawksworth@dunelm.com>"]
readme = "README.md"
packages = [{include = "py_commandline_proj", from = "src"}]
keywords = ["hypermodern"]

[tool.poetry.scripts]
py-commandline-proj = "py_commandline_proj.console:main"

[tool.poetry.dependencies]
python = "^3.8.1"
click = "^8.1.3"
requests = "^2.28.2"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["py_commandline_proj"]

[tool.coverage.report]
show_missing = true
fail_under = 100


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
coverage = {extras = ["toml"], version = "^7.2.1"}
pytest-cov = "^4.0.0"
pytest-mock = "^3.10.0"
autopep8 = "^2.0.1"
black = "^23.1.0"
flake8 = "^6.0.0"
flake8-bandit = "^4.1.1"
flake8-black = "^0.3.6"
flake8-bugbear = "^23.2.13"
flake8-import-order = "^0.18.2"
safety = "^2.3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
